# MetaMover

./: .gitignore  CMakeLists.txt  Dockerfile.win64sm  MetaMoverInstaller.nsi  README.md  appicon.rc  build.sh  control  metamover.spec  photofilehandler.cpp
